--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "ag-grid-angular": "^34.0.2",
+    "ag-grid-enterprise": "^34.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
